--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 
-<body style="background-color:#ffe6fd; font-family: Blippo, fantasy">
+<body style="font-family: Blippo, fantasy">
     <h1>Be Still </h1>
     <h2>CANDLES </h2>
 
